[gd_scene load_steps=5 format=3 uid="uid://cwwmgjvgxgrc2"]

[ext_resource type="Script" path="res://Scripts/AudioPlayer.gd" id="1"]
[ext_resource type="FontFile" uid="uid://v3a5q2cpqoya" path="res://DefaultFont.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://cxomjm1ru7rny" path="res://assets/play-button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://coqgy8o5x2an5" path="res://assets/pause-button.png" id="4"]

[node name="Popup" type="Panel"]
offset_right = 400.0
offset_bottom = 250.0
script = ExtResource("1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("2")

[node name="PlayStopButton" type="Button" parent="."]
layout_mode = 0
offset_left = 223.772
offset_top = 192.043
offset_right = 267.772
offset_bottom = 230.043
icon = ExtResource("3")

[node name="PauseResumeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 133.772
offset_top = 192.043
offset_right = 177.772
offset_bottom = 230.043
icon = ExtResource("4")

[node name="PositionSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 130.0
offset_right = 384.0
offset_bottom = 146.0
rounded = true
editable = false
tick_count = 10
ticks_on_borders = true

[connection signal="pressed" from="PlayStopButton" to="." method="_on_PlayStopButton_pressed"]
[connection signal="pressed" from="PauseResumeButton" to="." method="_on_PauseResumeButton_pressed"]
[connection signal="gui_input" from="PositionSlider" to="." method="_on_PositionSlider_gui_input"]
